--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
    padding: 0;
 }
 html , body{
-   background: url(Images/background.jpg);
+   background-image: url(Images/background.jpg);
    background-position: auto;
    background-size: cover;
    background-repeat: no-repeat;
