--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
    margin: 0;
    padding: 0;
 }
-html , body{
+body{
    background-image: url(Images/background.jpg);
    background-position: auto;
    background-size: cover;
